@@ -1,17 +1,17 @@
 [versions]
 kotlin = "1.6.10"
-firebase = "29.2.0"
+firebase = "30.0.2"
 androidx-media2 = "1.2.1"
 kodein = "7.11.0"
-flipper = "0.138.0"
-okhttp = "5.0.0-alpha.2"
+flipper = "0.146.0"
+okhttp = "5.0.0-alpha.7"
 moshi = "1.13.0"
 retrofit = "2.9.0"
-coroutines = "1.6.0"
+coroutines = "1.6.1"
 compose = "1.1.1"
 
 [libraries]
-android-build-gradle = { module = "com.android.tools.build:gradle", version = "7.1.2"}
+android-build-gradle = { module = "com.android.tools.build:gradle", version = "7.2.0"}
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin"}
 kotlin-poet = { module = "com.squareup:kotlinpoet", version = "1.8.0" }
 
@@ -20,24 +20,23 @@ kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-t
 
 play-services-cast = { module = "com.google.android.gms:play-services-cast", version = "21.0.1" }
 play-services-cast-companion = { module = "com.google.android.libraries.cast.companionlibrary:ccl", version = "2.9.1" }
-android-material = { module = "com.google.android.material:material", version = "1.5.0" }
+android-material = { module = "com.google.android.material:material", version = "1.6.0" }
 
 androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.7.0" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.4.1" }
 androidx-cardview = { module = "androidx.cardview:cardview", version = "1.0.0" }
-androidx-mediarouter = { module = "androidx.mediarouter:mediarouter", version = "1.2.6" }
+androidx-mediarouter = { module = "androidx.mediarouter:mediarouter", version = "1.3.0" }
 androidx-media2-session = { module = "androidx.media2:media2-session", version.ref = "androidx-media2" }
 androidx-media2-widget = { module = "androidx.media2:media2-widget", version.ref = "androidx-media2" }
 androidx-media2-player = { module = "androidx.media2:media2-player", version.ref = "androidx-media2" }
-androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version = "2.1.3" }
+androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version = "2.1.4" }
 
 kodein = { module = "org.kodein.di:kodein-di", version.ref = "kodein" }
 kodein-android = { module = "org.kodein.di:kodein-di-framework-android-x", version.ref = "kodein" }
 
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
-# todo update to version ref when upgraded
-okhttp-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version = "4.9.3" }
+okhttp-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
 
 flipper = { module = "com.facebook.flipper:flipper", version.ref = "flipper" }
 flipper-leakcanary = { module = "com.facebook.flipper:flipper-leakcanary2-plugin", version.ref = "flipper" }
@@ -48,15 +47,15 @@ facebook-soloader = { module = "com.facebook.soloader:soloader", version = "0.10
 
 junit = { module = "junit:junit", version = "4.13.2"}
 truth = { module = "com.google.truth:truth", version = "1.1.3" }
-mockito = { module = "org.mockito:mockito-core", version = "4.4.0"}
+mockito = { module = "org.mockito:mockito-core", version = "4.5.1"}
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "4.0.0"}
 
-result4k = { module = "dev.forkhandles:result4k", version = "2.0.0.0" }
+result4k = { module = "dev.forkhandles:result4k", version = "2.1.1.0" }
 byteunits = { module = "com.jakewharton.byteunits:byteunits", version = "0.9.1" }
 picasso = { module = "com.squareup.picasso:picasso", version = "2.71828" }
 timber = { module = "com.jakewharton.timber:timber", version = "5.0.1" }
-leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version = "2.8.1" }
-okio = { module = "com.squareup.okio:okio", version = "3.0.0" }
+leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version = "2.9.1" }
+okio = { module = "com.squareup.okio:okio", version = "3.1.0" }
 
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
